--- a/ME231.html
+++ b/ME231.html
@@ -35,13 +35,13 @@ br
 	
 <h3> Lecture Notes: </h3>
 <table class="table1">
-  <tr> <td>July 28, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/lec1.pdf" target="_blank"> Lecture 1</td> </tr>
-  <tr> <td>July 31, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/lec2.pdf" target="_blank">Lecture 2</td>  </tr>
-  <tr> <td>August 4, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
-  <tr> <td>August 7, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
-  <tr> <td>August 11, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
-  <tr> <td>August 14, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
-  <tr> <td>August 18, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
+  <tr> <td>July 28, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec1.pdf" target="_blank"> Lecture 1</td> </tr>
+  <tr> <td>July 31, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec2.pdf" target="_blank">Lecture 2</td>  </tr>
+  <tr> <td>August 4, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
+  <tr> <td>August 7, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
+  <tr> <td>August 11, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
+  <tr> <td>August 14, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
+  <tr> <td>August 18, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
 </table>
 
 
