--- a/ME231.html
+++ b/ME231.html
@@ -49,8 +49,8 @@ br
 
 <h3> Tutorial Problems: </h3>
 <table  class="table2">
-  <tr> <td>Tutorial 1</td> <td> <a href = "https://anshulfy.github.io/course_website/tuto1.pdf" target="_blank"> Link</td> </tr>
-  <tr> <td>Tutorial 2</td> <td> <a href = "https://anshulfy.github.io/course_website/tuto2.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 1</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto1.pdf" target="_blank"> Link</td> </tr>
+  <tr> <td>Tutorial 2</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto2.pdf" target="_blank">Link</td>  </tr>
 </table>
 </body>
 </html>
