--- a/ME231.html
+++ b/ME231.html
@@ -31,7 +31,7 @@ br
 <body>
   <h1 style="text-align:center">Dr. Anshul Faye (IIT Bhilai)</h1>
   <h2 style="text-align:center">Semester: 2020-21-W</h2>
-  <h2 style="text-align:center">Course: ME231: Solid Mechanics-I</h2>
+  <h2 style="text-align:center">ME231: Solid Mechanics-I</h2>
 	
 <h3> Lecture Notes: </h3>
 <table class="table1">
