--- a/ME531.html
+++ b/ME531.html
@@ -29,7 +29,7 @@ br
 <body>
   <h1 style="text-align:center">Dr. Anshul Faye (IIT Bhilai)</h1>
   <h2 style="text-align:center">Semester: 2020-21-W</h2>
-  <h2 style="text-align:center">Course: ME531: Advanced Mechanics of Solids</h2>
+  <h2 style="text-align:center; color:#cc3300">Course: ME531: Advanced Mechanics of Solids</h2>
 	
 <h3> Lecture Notes: </h3>
 <table class="table1">
