--- a/ME531.html
+++ b/ME531.html
@@ -27,7 +27,7 @@ br
 </head>
 
 <body>
-  <h1 style="text-align:center">Dr. Anshul Faye (IIT Bhilai)</h1>
+  <p style="font-size:50px; text-align:center">Dr. Anshul Faye (IIT Bhilai)</p>
   <h2 style="text-align:center">Semester: 2020-21-W</h2>
   <h2 style="text-align:center; color:#cc3300">ME531: Advanced Mechanics of Solids</h2>
 	
