--- a/ME531.html
+++ b/ME531.html
@@ -27,9 +27,9 @@ br
 </head>
 
 <body>
-  <p style="font-size:30px; font-weight: bold; text-align:center">Dr. Anshul Faye (IIT Bhilai)</p>
-  <h2 style="text-align:center">Semester: 2020-21-W</h2>
-  <h2 style="text-align:center; color:#cc3300">ME531: Advanced Mechanics of Solids</h2>
+  <p style="font-size:40px; font-weight: bold; text-align:center">Dr. Anshul Faye (IIT Bhilai)</p>
+  <p style="font-size:25px; font-weight: bold; text-align:center">Semester: 2020-21-W</p>
+  <p style="font-size:30px; font-weight: bold; text-align:center; color:#cc3300">ME531: Advanced Mechanics of Solids</p>
 	
 <h3> Lecture Notes: </h3>
 <table class="table1">
