--- a/ME531.html
+++ b/ME531.html
@@ -4,9 +4,11 @@
 <style>
 table{
   border-collapse: collapse;
-  width: 300px;
+  width: 400px;
 }
-
+body {
+ font-size: 130%;
+}
 th{
   text-align: center;
   padding: 8px;
@@ -31,7 +33,7 @@ br
   <p style="font-size:25px; font-weight: bold; text-align:center">Semester: 2020-21-W</p>
   <p style="font-size:35px; font-weight: bold; text-align:center; color:#cc3300">ME531: Advanced Mechanics of Solids</p>
 	
-<h3> Lecture Notes: </h3>
+<p style="font-size:25px; font-weight: bold"> Lecture Notes: <p>
 <table class="table1">
   <tr> <td>July 29, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/me531_lec1.pdf" target="_blank">Lecture 1</td> </tr>
   <tr> <td>August 3, 2020</td> <td> <a href = "https://anshulfy.github.io/course_website/me531_lec2.pdf" target="_blank">Lecture 2</td>  </tr>
