--- a/ME231.html
+++ b/ME231.html
@@ -6,7 +6,9 @@ table{
   border-collapse: collapse;
   width: 300px;
 }
-
+body {
+ font-size: 130%;
+}
 th{
   border: 1px solid #000000;
   text-align: center;
@@ -29,11 +31,12 @@ br
 </head>
 
 <body>
-  <h1 style="text-align:center">Dr. Anshul Faye (IIT Bhilai)</h1>
-  <h2 style="text-align:center">Semester: 2020-21-W</h2>
-  <h2 style="text-align:center; color:#0052cc">ME231: Solid Mechanics-I</h2>
+<body>
+  <p style="font-size:45px; font-weight: bold; text-align:center">Dr. Anshul Faye (IIT Bhilai)</p>
+  <p style="font-size:25px; font-weight: bold; text-align:center">Semester: 2020-21-W</p>
+  <p style="font-size:35px; font-weight: bold; text-align:center; color:#0052cc">ME231: Solid Mechanics-I</p>
 	
-<h3> Lecture Notes: </h3>
+<p style="font-size:25px; font-weight: bold"> Lecture Notes: <p>
 <table class="table1">
   <tr> <td>July 28, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec1.pdf" target="_blank"> Lecture 1</td> </tr>
   <tr> <td>July 31, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec2.pdf" target="_blank">Lecture 2</td>  </tr>
@@ -47,7 +50,7 @@ br
 
 <br/>
 
-<h3> Tutorial Problems: </h3>
+<p style="font-size:25px; font-weight: bold"> Tutorial Problems: <p>
 <table  class="table2">
   <tr> <td>Tutorial 1</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto1.pdf" target="_blank"> Link</td> </tr>
   <tr> <td>Tutorial 2</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto2.pdf" target="_blank">Link</td>  </tr>
