--- a/ME531.html
+++ b/ME531.html
@@ -10,10 +10,12 @@ body {
  font-size: 130%;
 }
 th{
+  border: 1px solid #000000;
   text-align: center;
   padding: 8px;
   }
 td {
+  border: 1px solid #000000;
   text-align: left;
   padding: 8px;
 }
