--- a/ME231.html
+++ b/ME231.html
@@ -35,7 +35,9 @@ br
   <p style="font-size:35px; font-weight: bold; text-align:center">Dr. Anshul Faye (IIT Bhilai)</p>
   <p style="font-size:25px; font-weight: bold; text-align:center">Semester: 2020-21-W</p>
   <p style="font-size:30px; font-weight: bold; text-align:center; color:#0052cc">ME231: Solid Mechanics-I</p>
-	
+
+<table style="width: 50%; margin-left: auto; margin-right: auto; vertical-align:top;">	
+<tr> <td style="border: 0px solid #000000;">
 <p style="font-size:25px; font-weight: bold"> Lecture Notes: <p>
 <table class="table1">
   <tr> <td>July 28, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec1.pdf" target="_blank"> Lecture 1</td> </tr>
@@ -46,14 +48,14 @@ br
   <tr> <td>August 14, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
   <tr> <td>August 18, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
 </table>
-
-
-<br/>
-
+</td>
+<td style="border: 0px solid #000000;">
 <p style="font-size:25px; font-weight: bold"> Tutorial Problems: <p>
 <table  class="table2">
   <tr> <td>Tutorial 1</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto1.pdf" target="_blank"> Link</td> </tr>
   <tr> <td>Tutorial 2</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto2.pdf" target="_blank">Link</td>  </tr>
 </table>
+</td>
+</tr>
 </body>
 </html>
