--- a/ME231.html
+++ b/ME231.html
@@ -4,7 +4,7 @@
 <style>
 table{
   border-collapse: collapse;
-  width: 400px;
+  width: 350px;
 }
 body {
  font-size: 130%;
@@ -57,5 +57,6 @@ br
 </table>
 </td>
 </tr>
+</table>
 </body>
 </html>
