--- a/ME531.html
+++ b/ME531.html
@@ -3,6 +3,8 @@
 <head>
 <style>
 table{
+  margin-left: auto; 
+  margin-right: auto;
   border-collapse: collapse;
   width: 400px;
 }
@@ -37,13 +39,13 @@ br
 	
 <p style="font-size:25px; font-weight: bold"> Lecture Notes: <p>
 <table class="table1">
-  <tr> <td>July 29, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me531_lec1.pdf" target="_blank">Lecture 1</td> </tr>
-  <tr> <td>August 3, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me531_lec2.pdf" target="_blank">Lecture 2</td>  </tr>
-  <tr> <td>August 5, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me531_lec3.pdf" target="_blank">Lecture 3</td>  </tr>
-  <tr> <td>August 10, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me531_lec4.pdf" target="_blank">Lecture 4</td> </tr>
-  <tr> <td>August 17, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me531_lec5.pdf" target="_blank">Lecture 5</td>  </tr>
-<!--  <tr> <td>August 19, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>  </tr>
-<!--  <tr> <td>August 24, 2020</td> <td> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
+  <tr> <td>July 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec1.pdf" target="_blank">Lecture 1</td> </tr>
+  <tr> <td>August 3, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec2.pdf" target="_blank">Lecture 2</td>  </tr>
+  <tr> <td>August 5, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec3.pdf" target="_blank">Lecture 3</td>  </tr>
+  <tr> <td>August 10, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec4.pdf" target="_blank">Lecture 4</td> </tr>
+  <tr> <td>August 17, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec5.pdf" target="_blank">Lecture 5</td>  </tr>
+<!--  <tr> <td>August 19, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>  </tr>
+<!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
 </table>
 </body>
 </html>
