--- a/ME231.html
+++ b/ME231.html
@@ -17,6 +17,7 @@ th{
 td {
   border: 1px solid #000000;
   text-align: left;
+  vertical-align:top;
   padding: 8px;
 }
 .table1 tr:nth-child(odd) {background-color: #BEFFB9;}
@@ -36,7 +37,7 @@ br
   <p style="font-size:25px; font-weight: bold; text-align:center">Semester: 2020-21-W</p>
   <p style="font-size:30px; font-weight: bold; text-align:center; color:#0052cc">ME231: Solid Mechanics-I</p>
 
-<table style="width: 70%; margin-left: auto; margin-right: auto; vertical-align:top;">	
+<table style="width: 70%; margin-left: auto; margin-right: auto;">	
 <tr> <td style="border: 1px solid #000000;">
 <p style="font-size:25px; font-weight: bold"> Lecture Notes: <p>
 <table class="table1">
