--- a/ME231.html
+++ b/ME231.html
@@ -36,7 +36,7 @@ br
   <p style="font-size:35px; font-weight: bold; text-align:center">Dr. Anshul Faye (IIT Bhilai)</p>
   <p style="font-size:25px; font-weight: bold; text-align:center">Semester: 2020-21-W</p>
   <p style="font-size:30px; font-weight: bold; text-align:center; color:#0052cc">ME231: Solid Mechanics-I</p>
-
+<hr style="height:2px;border-width:0;color:gray;background-color:#0052cc">
 <table style="width: 70%; margin-left: auto; margin-right: auto;">	
 <tr> <td style="border: 0px solid #000000;">
 <p style="font-size:25px; font-weight: bold"> Lecture Notes: <p>
