--- a/ME531.html
+++ b/ME531.html
@@ -36,7 +36,7 @@ br
   <p style="font-size:35px; font-weight: bold; text-align:center">Dr. Anshul Faye (IIT Bhilai)</p>
   <p style="font-size:25px; font-weight: bold; text-align:center">Semester: 2020-21-W</p>
   <p style="font-size:30px; font-weight: bold; text-align:center; color:#cc3300">ME531: Advanced Mechanics of Solids</p>
-	
+<hr style="height:2px;border-width:0;color:gray;background-color:#cc3300">	
 <p style="font-size:25px; font-weight: bold;  text-align:center;"> Lecture Notes: <p>
 <table class="table1">
   <tr> <td>July 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec1.pdf" target="_blank">Lecture 1</td> </tr>
