--- a/ME231.html
+++ b/ME231.html
@@ -48,6 +48,7 @@ br
   <tr> <td>August 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>August 14, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
   <tr> <td>August 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
+  <tr> <td>August 21, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec8.pdf" target="_blank">Lecture 7</td>  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
