--- a/ME231.html
+++ b/ME231.html
@@ -28,6 +28,16 @@ br
     display: block;
     margin:50px;
 }
+.blink {
+        animation: blinker 1s linear infinite;
+        color: red;
+        font-size: 15px;
+     }
+@keyframes blinker {
+  50% {
+      opacity: 0;
+      }
+}
 </style>
 </head>
 
@@ -48,7 +58,7 @@ br
   <tr> <td>August 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>August 14, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
   <tr> <td>August 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
-  <tr> <td>August 21, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
+  <tr> <td>August 21, 2020 <strong class="blink"> &nbsp;&nbsp(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
