--- a/ME231.html
+++ b/ME231.html
@@ -31,6 +31,7 @@ br
 .blink {
         animation: blinker 1s linear infinite;
         color: red;
+        background-color: yellow;
         font-size: 20px;
      }
 @keyframes blinker {
