--- a/courses.html
+++ b/courses.html
@@ -4,10 +4,12 @@
 <style>
 table{
   border-collapse: collapse;
-  width: 350px;
+  width: 80%;
+  margin-left: auto; 
+  margin-right: auto;
 }
 body {
- font-size: 130%;
+ font-size: 120%;
 }
 th{
   border: 1px solid #000000;
@@ -47,12 +49,67 @@ br
   <p style="font-size:35px; font-weight: bold; text-align:center">Dr. Anshul Faye</p>
   <p style="font-size:30px; font-weight: bold; text-align:center">Department of Mechanical Engineering, IIT Bhilai.</p>
 <hr style="height:2px;border-width:0;color:gray;background-color:#0052cc">
-<p style="font-size:25px; font-weight: bold">Semester: 2020-21-W<p>
+<p style="font-size:30px; font-weight: bold; text-align:center; color:#0052cc">Teaching at IIT Bhilai</p>
+<table class="table1">
+<tr>
+<td>
+<p style="font-size:22px; font-weight: bold">Semester: 2020-21-M<p>
 <ul>
   <li><a href = "https://anshulfy.github.io/course_webpage/ME231.html" target="_blank">ME231: Solid Mechanics-I (UG)</li>
   <br>
   <li><a href = "https://anshulfy.github.io/course_webpage/ME531.html" target="_blank">ME531: Advanced Mechanics of Solid (PG)</li>
+</ul>
+</td>
+<td>
+</td></tr>
+<tr><td><p style="font-size:22px; font-weight: bold">Semester: 2019-20-M<p>
+<ul>
+  <li>ME333: Theory of Machines and Mechancisms (UG)</li>
+  <br>
+  <li>ME531: Advanced Mechanics of Solid (PG)</li>
+  <br>
+  <li>ME371: ME Labs-I (UG)</li>
+</ul>
+</td>
+<td>
+<p style="font-size:22px; font-weight: bold">Semester: 2019-20-W<p>
+<ul>
+  <li>ME232: Dynamics (UG)</li>
+  <br>
+</ul>
+</td></tr>
+<tr><td>
+<p style="font-size:22px; font-weight: bold">Semester: 2018-19-M<p>
+<ul>
+  <li>ME250: Solid Mechanics-II (UG)</li>
+  <br>
+  <li>ME531: Advanced Mechanics of Solid (PG)</li>
+  <br>
 </ul>	
+</td>
+<td>
+<p style="font-size:22px; font-weight: bold">Semester: 2018-19-W<p>
+<ul>
+  <li>ME502: Advanced Engineering Mathematics (PG)</li>
+  <br>
+  <li>ME535: Theory of Elasticity (PG)</li>
+  <br>
+</ul>
+</td></tr>
+<tr><td>
+</td>
+<td>
+<p style="font-size:22px; font-weight: bold">Semester: 2017-18-W<p>
+<ul>
+  <li>ID1160: Solid Mechanics-I (UG)</li>
+  <br>
+  <li>ME1030: Dynamics (UG)</li>
+  <br>
+  <li>ME2421: Mechanics of Soilds Lab (UG)</li>
+  <br>
+  <li>ME5610: Fracture Mechanics (UG)</li>
+</ul>	
+</td></tr>
+</table>					
 </body>
 </html>
-
