--- a/ME531.html
+++ b/ME531.html
@@ -56,7 +56,8 @@ br
   <tr> <td>August 10, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec4.pdf" target="_blank">Lecture 4</td> </tr>
   <tr> <td>August 17, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>August 19, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>  </tr>
-  <tr> <td>August 24, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr>
+  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr>
+  <tr> <td>August 26, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec8.pdf" target="_blank">Lecture 8</td>  </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
 </table>
 </body>
