--- a/ME531.html
+++ b/ME531.html
@@ -50,14 +50,46 @@ br
 <hr style="height:2px;border-width:0;color:gray;background-color:#cc3300">	
 <p style="font-size:25px; font-weight: bold;  text-align:center;"> Lecture Notes: <p>
 <table class="table1">
-  <tr> <td>July 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec1.pdf" target="_blank">Lecture 1</td> </tr>
-  <tr> <td>August 3, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec2.pdf" target="_blank">Lecture 2</td>  </tr>
-  <tr> <td>August 5, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec3.pdf" target="_blank">Lecture 3</td>  </tr>
-  <tr> <td>August 10, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec4.pdf" target="_blank">Lecture 4</td> </tr>
-  <tr> <td>August 17, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec5.pdf" target="_blank">Lecture 5</td>  </tr>
-  <tr> <td>August 19, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>  </tr>
-  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr>
-  <tr> <td>August 26, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec8.pdf" target="_blank">Lecture 8</td>  </tr>
+  <tr> 
+    <td>July 29, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec1.pdf" target="_blank">Lecture 1</td> 
+    <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1596014236611" target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>August 3, 2020</td>
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec2.pdf" target="_blank">Lecture 2</td>  </tr>
+    <td style="text-align: center;"> Not Available </td>
+  </tr>
+  <tr> 
+    <td>August 5, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec3.pdf" target="_blank">Lecture 3</td>
+    <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1596617877312" target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>August 10, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec4.pdf" target="_blank">Lecture 4</td> 
+    <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1597055120527" target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>August 17, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec5.pdf" target="_blank">Lecture 5</td>
+    <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1597659769871" target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>August 19, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec6.pdf" target="_blank">Lecture 6</td>
+    <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1597827243048" target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>August 24, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>
+    <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1598265053214" target="_blank">Recorded Lecture</td>
+  </tr>   
+  <tr> 
+    <td>August 26, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec8.pdf" target="_blank">Lecture 8</td> 
+    <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1598432038338" target="_blank">Recorded Lecture</td>
+  </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
 </table>
 </body>
