--- a/ME531.html
+++ b/ME531.html
@@ -6,7 +6,7 @@ table{
   margin-left: auto; 
   margin-right: auto;
   border-collapse: collapse;
-  width: 350px;
+  width: 500px;
 }
 body {
  font-size: 130%;
@@ -57,7 +57,7 @@ br
   </tr>
   <tr> 
     <td>August 3, 2020</td>
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec2.pdf" target="_blank">Lecture 2</td>  </tr>
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec2.pdf" target="_blank">Lecture 2</td>
     <td style="text-align: center;"> Not Available </td>
   </tr>
   <tr> 
