--- a/ME231.html
+++ b/ME231.html
@@ -61,7 +61,8 @@ br
   <tr> <td>August 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
   <tr> <td>August 21, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
   <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec9.pdf" target="_blank">Lecture 9</td>  </tr>
-  <tr> <td>August 28, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
+  <tr> <td>August 28, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
+  <tr> <td>Spetember 04, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec11.pdf" target="_blank">Lecture 11</td>  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
