--- a/ME531.html
+++ b/ME531.html
@@ -86,11 +86,16 @@ br
     <td>August 24, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>
     <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1598265053214" target="_blank">Recorded Lecture</td>
+  </tr>
+    <tr> 
+    <td>August 26, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec8.pdf" target="_blank">Lecture 8</td>
+    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>   
   <tr> 
     <td>August 26, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec8.pdf" target="_blank">Lecture 8</td> 
-    <td style="text-align: center;"> <a href = "https://cdotmeetings.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1598432038338" target="_blank">Recorded Lecture</td>
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec9.pdf" target="_blank">Lecture 9</td> 
+    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
 </table>
