--- a/ME531.html
+++ b/ME531.html
@@ -49,6 +49,7 @@ br
   <p style="font-size:30px; font-weight: bold; text-align:center; color:#cc3300">ME531: Advanced Mechanics of Solids</p>
 <hr style="height:2px;border-width:0;color:gray;background-color:#cc3300">	
 <p style="font-size:30px; font-weight: bold;  text-align:center;"> Feedback: <p>
+  <center>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc1UtzjAxHgnkxzVyCYp-AOQRxTPxxC1Y59IamAaaw4pYlOhA/viewform?embedded=true" width="640" height="474" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 <p style="font-size:25px; font-weight: bold;  text-align:center;"> Lecture Notes: <p>
   <table class="table1">
