--- a/ME531.html
+++ b/ME531.html
@@ -92,10 +92,16 @@ br
     <td>August 26, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec8.pdf" target="_blank">Lecture 8</td>
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
-  </tr>   
+  </tr>
+  </tr>
+    <tr> 
+    <td>September 07, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec9.pdf" target="_blank">Lecture 9</td>
+    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+  </tr>  
   <tr> 
-    <td>September 07, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec9.pdf" target="_blank">Lecture 9</td> 
+    <td>September 09, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec10.pdf" target="_blank">Lecture 10</td> 
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
