--- a/ME531.html
+++ b/ME531.html
@@ -94,14 +94,19 @@ br
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
   </tr>
-    <tr> 
+  <tr> 
     <td>September 07, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec9.pdf" target="_blank">Lecture 9</td>
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>  
   <tr> 
-    <td>September 09, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec10.pdf" target="_blank">Lecture 10</td> 
+    <td>September 09, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec10.pdf" target="_blank">Lecture 10</td>
+    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>September 14, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec11.pdf" target="_blank">Lecture 11</td> 
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
