--- a/ME531.html
+++ b/ME531.html
@@ -110,8 +110,13 @@ br
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
-    <td>September 16, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec12.pdf" target="_blank">Lecture 12</td> 
+    <td>September 16, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec12.pdf" target="_blank">Lecture 12</td>
+    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>September 24, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec13.pdf" target="_blank">Lecture 13</td> 
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
