--- a/ME531.html
+++ b/ME531.html
@@ -120,8 +120,13 @@ br
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
-    <td>September 28, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec14.pdf" target="_blank">Lecture 14</td> 
+    <td>September 28, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec14.pdf" target="_blank">Lecture 14</td>
+    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>October 03, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec15.pdf" target="_blank">Lecture 15</td> 
     <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
