--- a/ME231.html
+++ b/ME231.html
@@ -70,9 +70,10 @@ br
   <tr> <td>Spetember 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec13.pdf" target="_blank">Lecture 13</td>  </tr>
   <tr> <td>Spetember 15, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec14.pdf" target="_blank">Lecture 14</td>  </tr>
   <tr> <td>Spetember 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec15.pdf" target="_blank">Lecture 15</td>  </tr>
-  <tr> <td>Spetember 27, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec16.pdf" target="_blank">Lecture 16
-        <p> <a href = "https://youtu.be/3kzheGQI1jI" target="_blank">Video 1 </p> 
-        <p> <a href = "https://youtu.be/EEB996WT0dU" target="_blank">Video 2 </p></td>  </tr>
+  <tr> <td>Spetember 27, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec16.pdf" target="_blank">Lecture 16
+        <p> <a href = "https://youtu.be/3kzheGQI1jI" target="_blank">Video 1, <a href = "https://youtu.be/EEB996WT0dU" target="_blank">Video 2 </p></td>  
+  </tr>
+  <tr> <td>Spetember 29, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
