--- a/ME531.html
+++ b/ME531.html
@@ -91,43 +91,48 @@ br
     <tr> 
     <td>August 26, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec8.pdf" target="_blank">Lecture 8</td>
-    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1598432038338" target="_blank">Recorded Lecture</td>
   </tr>
   </tr>
   <tr> 
     <td>September 07, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec9.pdf" target="_blank">Lecture 9</td>
-    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1599474567969" target="_blank">Recorded Lecture</td>
   </tr>  
   <tr> 
     <td>September 09, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec10.pdf" target="_blank">Lecture 10</td>
-    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+    <td style="text-align: center;"> Not available</td>
   </tr>
   <tr> 
     <td>September 14, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec11.pdf" target="_blank">Lecture 11</td>
-    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1600079182615" target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
     <td>September 16, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec12.pdf" target="_blank">Lecture 12</td>
-    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+    <td style="text-align: center;"> Not available</td>
   </tr>
   <tr> 
     <td>September 23, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec13.pdf" target="_blank">Lecture 13</td>
-    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1600851561647" target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
     <td>September 28, 2020</td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec14.pdf" target="_blank">Lecture 14</td>
-    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1601288509823" target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
-    <td>October 03, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec15.pdf" target="_blank">Lecture 15</td> 
-    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
+    <td>October 05, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec15.pdf" target="_blank">Lecture 15</td>
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1601893976705" target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>October 12, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec16.pdf" target="_blank">Lecture 16</td> 
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1602498063993" target="_blank">Recorded Lecture</td>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
 </table>
