--- a/ME231.html
+++ b/ME231.html
@@ -73,7 +73,8 @@ br
   <tr> <td>Spetember 27, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec16.pdf" target="_blank">Lecture 16
         <p> <a href = "https://youtu.be/3kzheGQI1jI" target="_blank">Video1, <a href = "https://youtu.be/EEB996WT0dU" target="_blank">Video2</p></td>  
   </tr>
-  <tr> <td>Spetember 29, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
+  <tr> <td>Spetember 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
+  <tr> <td>October 13, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec18.pdf" target="_blank">Lecture 18</td>  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
