--- a/ME531.html
+++ b/ME531.html
@@ -130,9 +130,14 @@ br
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1601893976705" target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
-    <td>October 12, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
-    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec16.pdf" target="_blank">Lecture 16</td> 
+    <td>October 12, 2020</td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec16.pdf" target="_blank">Lecture 16</td>
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1602498063993" target="_blank">Recorded Lecture</td>
+  </tr>
+  <tr> 
+    <td>October 19, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec17.pdf" target="_blank">Lecture 17</td> 
+    <td style="text-align: center;"> <a href = "  " target="_blank">Recorded Lecture</td>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
 </table>
