--- a/ME231.html
+++ b/ME231.html
@@ -75,7 +75,8 @@ br
   </tr>
   <tr> <td>Spetember 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec17.pdf" target="_blank">Lecture 17</td>  </tr>
   <tr> <td>October 13, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec18.pdf" target="_blank">Lecture 18</td>  </tr>
-  <tr> <td>October 16, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
+  <tr> <td>October 16, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
+  <tr> <td>October 20, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
