--- a/ME231.html
+++ b/ME231.html
@@ -77,7 +77,10 @@ br
   <tr> <td>October 13, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec18.pdf" target="_blank">Lecture 18</td>  </tr>
   <tr> <td>October 16, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
   <tr> <td>October 20, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
-  <tr> <td>October 23, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec21.pdf" target="_blank">Lecture 21</td>  </tr>
+  <tr> <td>October 23, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec21.pdf" target="_blank">Lecture 21</td>  </tr>
+  <tr> <td>October 29, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec22.pdf" target="_blank">Lecture 22
+    <p> <a href = "" target="_blank">Video1 </p></td> 
+  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
