--- a/ME231.html
+++ b/ME231.html
@@ -79,7 +79,7 @@ br
   <tr> <td>October 20, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
   <tr> <td>October 23, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec21.pdf" target="_blank">Lecture 21</td>  </tr>
   <tr> <td>October 29, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec22.pdf" target="_blank">Lecture 22
-    <p> <a href = "" target="_blank">Video1 </p></td> 
+    <p> <a href = "https://youtu.be/alMW1F_is-E" target="_blank">Video1 </p></td> 
   </tr>
 </table>
 </td>
