--- a/ME231.html
+++ b/ME231.html
@@ -82,7 +82,7 @@ br
     <p> <a href = "https://youtu.be/alMW1F_is-E" target="_blank">Video1 </p></td> 
   </tr>
   <tr> <td>November 01, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec23.pdf" target="_blank">Lecture 23
-   <p> <a href = "" target="_blank">Video1 </p></td> 
+   <p> <a href = "https://youtu.be/nv1axHGjeOk" target="_blank">Video1 </p></td> 
   </tr>
 </table>
 </td>
