--- a/ME531.html
+++ b/ME531.html
@@ -144,6 +144,11 @@ br
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec18.pdf" target="_blank">Lecture 18</td> 
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1603432762543" target="_blank">Recorded Lecture</td>
   </tr>
+    <tr> 
+    <td>November 02, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec19.pdf" target="_blank">Lecture 19</td> 
+    <td style="text-align: center;"> <a href = "" target="_blank">Recorded Lecture</td>
+  </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
 </table>
 </body>
