--- a/ME231.html
+++ b/ME231.html
@@ -91,7 +91,8 @@ br
 <table  class="table2">
   <tr> <td>Tutorial 1</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto1.pdf" target="_blank"> Link</td> </tr>
   <tr> <td>Tutorial 2</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto2.pdf" target="_blank">Link</td>  </tr>
-  <tr> <td>Tutorial 3  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto3.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 3</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto3.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 4  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto4.pdf" target="_blank">Link</td>  </tr>
 </table>
 </td>
 </tr>
