--- a/ME531.html
+++ b/ME531.html
@@ -140,18 +140,23 @@ br
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1603103056667" target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
-    <td>October 23, 2020 </strong></td> 
+    <td>October 23, 2020 </td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec18.pdf" target="_blank">Lecture 18</td> 
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1603432762543" target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
-    <td>November 02, 2020 </strong></td> 
+    <td>November 02, 2020 </td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec19.pdf" target="_blank">Lecture 19</td> 
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1604312436111" target="_blank">Recorded Lecture</td>
   <tr> 
-    <td>November 04, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td>November 04, 2020 </td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec20.pdf" target="_blank">Lecture 20</td> 
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1604480158492" target="_blank">Recorded Lecture</td>
+  </tr>  
+  <tr> 
+    <td>November 09 , 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec21.pdf" target="_blank">Lecture 21</td> 
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1604917602956" target="_blank">Recorded Lecture</td>
   </tr>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
