--- a/ME231.html
+++ b/ME231.html
@@ -78,12 +78,14 @@ br
   <tr> <td>October 16, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec19.pdf" target="_blank">Lecture 19</td>  </tr>
   <tr> <td>October 20, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec20.pdf" target="_blank">Lecture 20</td>  </tr>
   <tr> <td>October 23, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec21.pdf" target="_blank">Lecture 21</td>  </tr>
-  <tr> <td>October 29, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec22.pdf" target="_blank">Lecture 22
+  <tr> <td>October 29, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec22.pdf" target="_blank">Lecture 22
     <p> <a href = "https://youtu.be/alMW1F_is-E" target="_blank">Video1 </p></td> 
   </tr>
-  <tr> <td>November 01, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec23.pdf" target="_blank">Lecture 23
+  <tr> <td>November 01, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec23.pdf" target="_blank">Lecture 23
    <p> <a href = "https://youtu.be/nv1axHGjeOk" target="_blank">Video1 </p></td> 
   </tr>
+  <tr> <td>October 06, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec24.pdf" target="_blank">Lecture 24</td>  </tr>
+  <tr> <td>October 09, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec25.pdf" target="_blank">Lecture 25</td>  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
