--- a/ME231.html
+++ b/ME231.html
@@ -97,7 +97,8 @@ br
   <tr> <td>Tutorial 2</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto2.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 3</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto3.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto4.pdf" target="_blank">Link</td>  </tr>
-  <tr> <td>Tutorial 5  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto5.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 5</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto5.pdf" target="_blank">Link</td>  </tr>
+  <tr> <td>Tutorial 6  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto6.pdf" target="_blank">Link</td>  </tr>
 </table>
 </td>
 </tr>
