--- a/ME531.html
+++ b/ME531.html
@@ -163,6 +163,11 @@ br
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec22.pdf" target="_blank">Lecture 22</td> 
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1605085225400" target="_blank">Recorded Lecture</td>
   </tr>
+  <tr> 
+    <td>November 16, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec23.pdf" target="_blank">Lecture 23</td> 
+    <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1605522732685" target="_blank">Recorded Lecture</td>
+  </tr>
   </tr>
 <!--  <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec7.pdf" target="_blank">Lecture 7</td>  </tr> -->
 </table>
