--- a/ME531.html
+++ b/ME531.html
@@ -154,12 +154,12 @@ br
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1604480158492" target="_blank">Recorded Lecture</td>
   </tr>  
   <tr> 
-    <td>November 09, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td>November 09, 2020 </td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec21.pdf" target="_blank">Lecture 21</td> 
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1604917602956" target="_blank">Recorded Lecture</td>
   </tr>
   <tr> 
-    <td>November 11, 2020  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> 
+    <td>November 11, 2020 </td> 
     <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me531_lec22.pdf" target="_blank">Lecture 22</td> 
     <td style="text-align: center;"> <a href = "https://vcdot.cdot.in/playback/presentation/2.0/playback.html?meetingId=a72e620d46863ff146b0b0a1128458ccfe071703-1605085225400" target="_blank">Recorded Lecture</td>
   </tr>
