--- a/courses.html
+++ b/courses.html
@@ -65,7 +65,7 @@ br
 <ul>
   <li><a href = "https://anshulfy.github.io/course_webpage/ME232.html" target="_blank">ME232: Dynanmics (UG)</li>
   <br>
-  <li><a href = "https://anshulfy.github.io/course_webpage/ME531.html" target="_blank">***</li>
+  <li><a href = "https://anshulfy.github.io/course_webpage/" target="_blank">***</li>
 </ul>
 </td></tr>
 <tr><td><p style="font-size:22px; font-weight: bold">Semester: 2019-20-M<p>
